sends popup of result but still has cropping issue

--- a/select.css
+++ b/select.css
@@ -4,7 +4,7 @@ body {
     -webkit-user-select:none;
     -webkit-touch-callout: none;
     -khtml-user-select: none;
-     user-select:none;
+    user-select:none;
  }
  
 #selection {
@@ -16,6 +16,5 @@ body {
 
 #selection.complete {
     background: #E0F1E4;
-    border-color: #0CA50E;
     opacity: 0;
 }
